Optimized photos + Directions Page

--- a/host.html
+++ b/host.html
@@ -88,6 +88,7 @@
                       <li><a href="#section-gallery" data-toggle="modal" data-target="#modalBookLinks">Reservations</a>
                       </li>
                       <li><a href="host.html">The Host</a></li>
+                      <li><a href="directions.html">Directions</a></li>
                     </ul>
                   </div>
                   <div class="col-md-9 extra-info">
@@ -140,7 +141,7 @@
               data-target="#modalBookLinks">Make your Reservation</a></p>
         </div>
       </div>
-      <a href="#section-housestructure" class="scroll-down">
+      <a href="#section-thehost" class="scroll-down">
         <div class="container">
           <div class="chevron"></div>
           <div class="chevron"></div>
@@ -153,7 +154,7 @@
   <!-- END section -->
 
 
-  <section class="section bg-pattern host-section">
+  <section class="section bg-pattern host-section" id="section-thehost">
     <div class="container">
       <div class="row">
         <div class="col-md-7">
