--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                       <li><a href="#section-gallery" data-toggle="modal" data-target="#modalBookLinks">Reservations</a>
                       </li>
                       <li><a href="host.html">The Host</a></li>
+                      <li><a href="directions.html">Directions</a></li>
                     </ul>
                   </div>
                   <div class="col-md-9 extra-info">
@@ -550,7 +551,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 visit mb-3" data-aos="fade-right">
           <a href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171292-Reviews-Sarakiniko_Beach-Milos_Cyclades_South_Aegean.html"
-            target="_blank"><img src="img/sarakiniko01_001.jpg" alt="Image placeholder" class="img-fluid"> </a>
+            target="_blank"><img src="img/sarakiniko.jpg" alt="Image placeholder" class="img-fluid"> </a>
           <h3><a
               href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171292-Reviews-Sarakiniko_Beach-Milos_Cyclades_South_Aegean.html"
               target="_blank">Sarakiniko</a></h3>
@@ -569,7 +570,7 @@
         </div>
         <div class="col-lg-3 col-md-6 visit mb-3" data-aos="fade-right" data-aos-delay="100">
           <a href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171345-Reviews-Papafragas_Cave-Milos_Cyclades_South_Aegean.html"
-            target="_blank"><img src="img/papafragas _001.jpg" alt="Image placeholder" class="img-fluid"> </a>
+            target="_blank"><img src="img/papafragas.jpg" alt="Image placeholder" class="img-fluid"> </a>
           <h3><a
               href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171345-Reviews-Papafragas_Cave-Milos_Cyclades_South_Aegean.html"
               target="_blank">Papafragas Cave</a></h3>
