Directions and Photos Optimization

--- a/host.html
+++ b/host.html
@@ -148,7 +148,7 @@
           <div class="chevron"></div>
           <span class="text">Scroll down</span>
         </div>
-      </a> -->
+      </a> 
     </div>
   </section>
   <!-- END section -->
@@ -221,6 +221,7 @@
             <li><a href="#section-gallery" data-toggle="modal" data-target="#modalBookLinks">Reservations</a>
             </li>
             <li><a href="host.html">The Host</a></li>
+            <li><a href="directions.html">Directions</a></li>
           </ul>
         </div>
 
