--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="chevron"></div>
           <span class="text">Scroll down</span>
         </div>
-      </a> -->
+      </a> 
     </div>
   </section>
   <!-- END section -->
@@ -656,6 +656,7 @@
             <li><a href="#section-gallery" data-toggle="modal" data-target="#modalBookLinks">Reservations</a>
             </li>
             <li><a href="host.html">The Host</a></li>
+            <li><a href="directions.html">Directions</a></li>
           </ul>
         </div>
 
