--- a/host.html
+++ b/host.html
@@ -94,8 +94,10 @@
                   <div class="col-md-9 extra-info">
                     <div class="row">
                       <div class="col-md-9 mb-5">
-                        <iframe
+                        <!-- <iframe
                           src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d25576.98128687921!2d24.47496524974692!3d36.743626737361545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e0!4m5!1s0x1498df40155a6acb%3A0x500bd2ce2bb1320!2zzpHOtM6szrzOsc-C!3m2!1d36.7252955!2d24.444758699999998!4m3!3m2!1d36.752533299999996!2d24.510447199999998!5e0!3m2!1sel!2sgr!4v1554762172129!5m2!1sel!2sgr"
+                          width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m32!1m12!1m3!1d25578.548213303653!2d24.460092421045786!3d36.7389247674968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m17!3e0!4m5!1s0x1498df40155a6acb%3A0x500bd2ce2bb1320!2zzpHOtM6szrzOsc-C!3m2!1d36.7252955!2d24.444758699999998!4m3!3m2!1d36.7492351!2d24.506630299999998!4m5!1s0x1498df92fe057e0f%3A0xcc48a1c875a049c7!2sCasa+Filakopi%2C+Eparchiaki+Odos+Triovasalou+-+Apollonion%2C+Milos!3m2!1d36.752533799999995!2d24.5104454!5e0!3m2!1sel!2sgr!4v1561484844728!5m2!1sel!2sgr"
                           width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                       </div>
                       <div class="col-md-3">
