--- a/directions.html
+++ b/directions.html
@@ -50,17 +50,17 @@
             <div class="col-md-12 text-center"><a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1"
                 class="btn btn-primary text-white d-block .btn-md">Airbnb</a></div>
             <br>
-            <div class="col-md-12 text-center" style="text-align:center;"><a
+            <!-- <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.booking.com/hotel/gr/casa-filakopi.el.html#tab-main"
-                class="btn btn-primary text-white d-block .btn-md">Booking</a></div>
-            <br>
+                class="btn btn-primary text-white d-block .btn-md">Booking</a></div> -->
+            <!-- <br> -->
             <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.homeaway.com/vacation-rental/p7177066"
                 class="btn btn-primary text-white d-block .btn-md">HomeAway</a></div>
             <br>
-            <div class="col-md-12 text-center" style="text-align:center;"><a
+            <!-- <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.tripadvisor.com/VacationRentalReview-g1105860-d14925028-CASA_FILAKOPI-Pollonia_Milos_Cyclades_South_Aegean.html"
-                class="btn btn-primary text-white d-block .btn-md">TripAdvisor</a></div>
+                class="btn btn-primary text-white d-block .btn-md">TripAdvisor</a></div> -->
           </row>
         </div>
       </div>
@@ -107,11 +107,11 @@
                         <h3>Connect With Us</h3>
                         <ul class="list-unstyled">
                           <li><a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1">Airbnb</a></li>
-                          <li><a href="https://www.booking.com/hotel/gr/casa-filakopi.el.html">Booking</a></li>
+                          <!-- <li><a href="https://www.booking.com/hotel/gr/casa-filakopi.el.html">Booking</a></li> -->
                           <li><a href="https://www.homeaway.com/vacation-rental/p7177066">HomeAway</a></li>
-                          <li><a
+                          <!-- <li><a
                               href="https://www.tripadvisor.com/VacationRentalReview-g1105860-d14925028-CASA_FILAKOPI-Pollonia_Milos_Cyclades_South_Aegean.html">TripAdvisor</a>
-                          </li>
+                          </li> -->
                         </ul>
                         <br>
                         <br>
@@ -535,11 +535,11 @@
         </div>
         <div class="col-md-3 mb-5" >
           <p class="text-right social">
-            <a href="https://www.tripadvisor.com/VacationRentalReview-g1105860-d14925028-CASA_FILAKOPI-Pollonia_Milos_Cyclades_South_Aegean.html"
-              target="_blank" rel="noopener noreferrer"><span class="fab fa-tripadvisor"></span></a>
-            <a href="https://www.facebook.com/CasaFilakopi/"><span class="fab fa-facebook"></span></a>
-            <a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1"><span class="fab fa-airbnb"></span></a>
-            <!-- <a href="#"><span class="fab fa-instagram"></span></a> -->
+            <!-- <a href="https://www.tripadvisor.com/VacationRentalReview-g1105860-d14925028-CASA_FILAKOPI-Pollonia_Milos_Cyclades_South_Aegean.html"
+              target="_blank" rel="noopener noreferrer"><span class="fab fa-tripadvisor"></span></a> -->
+            <a href="https://www.facebook.com/CasaFilakopi/" target="_blank" rel="noopener noreferrer"><span class="fab fa-facebook"></span></a>
+            <a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1" target="_blank" rel="noopener noreferrer"><span class="fab fa-airbnb"></span></a>
+            <a href="https://www.instagram.com/casa_filakopi/" target="_blank" rel="noopener noreferrer"><span class="fab fa-instagram"></span></a>
           </p>
         </div>
       </div>
