--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <figure class="img-absolute">
             <img src="img/tinified/_DSC1119_rounded.jpg" alt="Image" class="img-fluid" data-aos="fade-right">
           </figure>
-          <img src="img/tinified/_DSC1116.jpg" alt="Image" class="img-fluid rounded">
+          <img src="img/tinified/_DSC1118.jpg" alt="Image" class="img-fluid rounded">
         </div>
         <div class="col-md-12 col-lg-4 ml-auto order-lg-2 position-relative mb-5" data-aos="fade-up">
           <h2 class="heading">Master Bedroom</h2>
@@ -209,27 +209,31 @@
               <li data-target="#carousel-example-1z" data-slide-to="2"></li>
               <li data-target="#carousel-example-1z" data-slide-to="3"></li>
               <li data-target="#carousel-example-1z" data-slide-to="4"></li>
-              <li data-target="#carousel-example-1z" data-slide-to="5"></li>
+              <!-- <li data-target="#carousel-example-1z" data-slide-to="5"></li> -->
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="img/tinified/_DSC1121.jpg" alt="First slide">
               </div>
+              <!-- <div class="carousel-item">
+                <img class="d-block w-100" src="img/tinified/_DSC1116.jpg" alt="Second slide">
+              </div> -->
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1118.jpg" alt="Second slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1137.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1137.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1138.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1138.jpg" alt="Fourth slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1146.jpg" alt="Fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1146.jpg" alt="Fifth slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1150.jpg" alt="Fifth slide">
               </div>
-              <div class="carousel-item">
+              <!-- <div class="carousel-item">
                 <img class="d-block w-100" src="img/tinified/_DSC1150.jpg" alt="Sixth slide">
-              </div>
+              </div> -->
+              <!-- We had 6 slides but we drop the second one. So we had to push back everything. -->
             </div>
             <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
