Master Bedroom Photo Changes

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
       <div class="row align-items-center">
         <div class="col-md-12 col-lg-7  order-lg-1 " data-aos="fade-up">
           <figure class="img-absolute">
-            <img src="img/tinified/_DSC1119_rounded.jpg" alt="Image" class="img-fluid" data-aos="fade-right">
+            <img src="img/tinified/_DSC1118_rounded.jpg" alt="Image" class="img-fluid" data-aos="fade-right">
           </figure>
-          <img src="img/tinified/_DSC1118.jpg" alt="Image" class="img-fluid rounded">
+          <img src="img/tinified/_DSC1119-min_tinified_Croped.jpg" alt="Image" class="img-fluid rounded">
         </div>
         <div class="col-md-12 col-lg-4 ml-auto order-lg-2 position-relative mb-5" data-aos="fade-up">
           <h2 class="heading">Master Bedroom</h2>
