--- a/directions.html
+++ b/directions.html
@@ -50,10 +50,10 @@
             <div class="col-md-12 text-center"><a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1"
                 class="btn btn-primary text-white d-block .btn-md">Airbnb</a></div>
             <br>
-            <!-- <div class="col-md-12 text-center" style="text-align:center;"><a
+            <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.booking.com/hotel/gr/casa-filakopi.el.html#tab-main"
-                class="btn btn-primary text-white d-block .btn-md">Booking</a></div> -->
-            <!-- <br> -->
+                class="btn btn-primary text-white d-block .btn-md">Booking</a></div>
+            <br>
             <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.homeaway.com/vacation-rental/p7177066"
                 class="btn btn-primary text-white d-block .btn-md">HomeAway</a></div>
@@ -107,7 +107,7 @@
                         <h3>Connect With Us</h3>
                         <ul class="list-unstyled">
                           <li><a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1">Airbnb</a></li>
-                          <!-- <li><a href="https://www.booking.com/hotel/gr/casa-filakopi.el.html">Booking</a></li> -->
+                          <li><a href="https://www.booking.com/hotel/gr/casa-filakopi.el.html">Booking</a></li>
                           <li><a href="https://www.homeaway.com/vacation-rental/p7177066">HomeAway</a></li>
                           <!-- <li><a
                               href="https://www.tripadvisor.com/VacationRentalReview-g1105860-d14925028-CASA_FILAKOPI-Pollonia_Milos_Cyclades_South_Aegean.html">TripAdvisor</a>
