--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <div class="col-md-12 text-center"><a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1"
                 class="btn btn-primary text-white d-block .btn-md">Airbnb</a></div>
             <br>
-            <!-- <div class="col-md-12 text-center" style="text-align:center;"><a
+            <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.booking.com/hotel/gr/casa-filakopi.el.html#tab-main"
-                class="btn btn-primary text-white d-block .btn-md">Booking</a></div> -->
-            <!-- <br> -->
+                class="btn btn-primary text-white d-block .btn-md">Booking</a></div>
+            <br>
             <div class="col-md-12 text-center" style="text-align:center;"><a
                 href="https://www.homeaway.com/vacation-rental/p7177066"
                 class="btn btn-primary text-white d-block .btn-md">HomeAway</a></div>
@@ -103,7 +103,7 @@
                         <h3>Connect With Us</h3>
                         <ul class="list-unstyled">
                           <li><a href="https://www.airbnb.gr/rooms/26666340?guests=1&adults=1">Airbnb</a></li>
-                          <!-- <li><a href="https://www.booking.com/hotel/gr/casa-filakopi.el.html">Booking</a></li> -->
+                          <li><a href="https://www.booking.com/hotel/gr/casa-filakopi.el.html">Booking</a></li>
                           <li><a href="https://www.homeaway.com/vacation-rental/p7177066">HomeAway</a></li>
                           <!-- <li><a
                               href="https://www.tripadvisor.com/VacationRentalReview-g1105860-d14925028-CASA_FILAKOPI-Pollonia_Milos_Cyclades_South_Aegean.html">TripAdvisor</a>
@@ -209,26 +209,26 @@
               <li data-target="#carousel-example-1z" data-slide-to="2"></li>
               <li data-target="#carousel-example-1z" data-slide-to="3"></li>
               <li data-target="#carousel-example-1z" data-slide-to="4"></li>
-              <!-- <li data-target="#carousel-example-1z" data-slide-to="5"></li> -->
+              <li data-target="#carousel-example-1z" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="img/tinified/_DSC1121.jpg" alt="First slide">
               </div>
-              <!-- <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1116.jpg" alt="Second slide">
-              </div> -->
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1137.jpg" alt="Second slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1118.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1138.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1137.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1146.jpg" alt="Fourth slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1138.jpg" alt="Fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1150.jpg" alt="Fifth slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1146.jpg" alt="Fifth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/tinified/_DSC1150.jpg" alt="Sixth slide">
               </div>
               <!-- <div class="carousel-item">
                 <img class="d-block w-100" src="img/tinified/_DSC1150.jpg" alt="Sixth slide">
@@ -279,6 +279,7 @@
               <li data-target="#carousel-example-2z" data-slide-to="0" class="active"></li>
               <li data-target="#carousel-example-2z" data-slide-to="1"></li>
               <li data-target="#carousel-example-2z" data-slide-to="2"></li>
+              <!-- <li data-target="#carousel-example-2z" data-slide-to="3"></li> -->
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
@@ -287,8 +288,11 @@
               <div class="carousel-item">
                 <img class="d-block w-100" src="img/tinified/_DSC1149.jpg" alt="Second slide">
               </div>
+              <!-- <div class="carousel-item">
+                <img class="d-block w-100" src="img/tinified/_DSC1134_rounded.jpg" alt="Third slide">
+              </div> -->
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1132.jpg" alt="Third slide">
+                <img class="d-block w-100" src="img/tinified/_DSC1132.jpg" alt="Fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-example-2z" role="button" data-slide="prev">
