--- a/directions.html
+++ b/directions.html
@@ -542,7 +542,7 @@
           <p class="text-center">
             Copyright &copy;<script>
               document.write(new Date().getFullYear());
-            </script> Spyros Kasdaglis | All rights reserved </p>
+            </script> miloscasa.com | All rights reserved </p>
         </div>
         <div class="col-md-3 mb-5" >
           <p class="text-right social">
