--- a/index.html
+++ b/index.html
@@ -571,83 +571,7 @@
             Papafragas , Mytakas , Pachena , Sarakiniko , Kastanas.</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-6 visit mb-3" data-aos="fade-right">
-          <a href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171292-Reviews-Sarakiniko_Beach-Milos_Cyclades_South_Aegean.html"
-            target="_blank"><img src="img/sarakiniko.jpg" alt="Image placeholder" class="img-fluid"> </a>
-          <h3><a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171292-Reviews-Sarakiniko_Beach-Milos_Cyclades_South_Aegean.html"
-              target="_blank">Sarakiniko</a></h3>
-          <div class="reviews-star float-left">
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star-half"></span>
-          </div>
-          <span class="reviews-count float-right">
-            1,852 reviews <a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171292-Reviews-Sarakiniko_Beach-Milos_Cyclades_South_Aegean.html"
-              target="_blank"><span class="fab fa-tripadvisor"></span></a>
-          </span>
-        </div>
-        <div class="col-lg-3 col-md-6 visit mb-3" data-aos="fade-right" data-aos-delay="100">
-          <a href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171345-Reviews-Papafragas_Cave-Milos_Cyclades_South_Aegean.html"
-            target="_blank"><img src="img/papafragas.jpg" alt="Image placeholder" class="img-fluid"> </a>
-          <h3><a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171345-Reviews-Papafragas_Cave-Milos_Cyclades_South_Aegean.html"
-              target="_blank">Papafragas Cave</a></h3>
-          <div class="reviews-star float-left">
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star-outline"></span>
-          </div>
-          <span class="reviews-count float-right">
-            389 reviews <a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d2171345-Reviews-Papafragas_Cave-Milos_Cyclades_South_Aegean.html"
-              target="_blank"><span class="fab fa-tripadvisor"></span></a>
-          </span>
-        </div>
-        <div class="col-lg-3 col-md-6 visit mb-3" data-aos="fade-right" data-aos-delay="200">
-          <a href="https://www.tripadvisor.com.gr/Attraction_Review-g7923672-d12880056-Reviews-Pachaina_Beach-Pachena_Milos_Cyclades_South_Aegean.html"
-            target="_blank"><img src="img/pachaina01_001.jpg" alt="Image placeholder" class="img-fluid"> </a>
-          <h3><a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g7923672-d12880056-Reviews-Pachaina_Beach-Pachena_Milos_Cyclades_South_Aegean.html"
-              target="_blank">Pachaina Beach</a></h3>
-          <div class="reviews-star float-left">
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star-outline"></span>
-          </div>
-          <span class="reviews-count float-right">
-            14 reviews <a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g7923672-d12880056-Reviews-Pachaina_Beach-Pachena_Milos_Cyclades_South_Aegean.html"
-              target="_blank"><span class="fab fa-tripadvisor"></span></a>
-          </span>
-        </div>
-        <div class="col-lg-3 col-md-6 visit mb-3" data-aos="fade-right" data-aos-delay="300">
-          <a href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d4988659-Reviews-Alogomandra_Beach-Milos_Cyclades_South_Aegean.html"
-            target="_blank"><img src="img/alogomandra_001.jpg" alt="Image placeholder" class="img-fluid"> </a>
-          <h3><a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d4988659-Reviews-Alogomandra_Beach-Milos_Cyclades_South_Aegean.html"
-              target="_blank">Alogomandra Beach</a></h3>
-          <div class="reviews-star float-left">
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star"></span>
-            <span class="ion-android-star-half"></span>
-          </div>
-          <span class="reviews-count float-right">
-            74 reviews <a
-              href="https://www.tripadvisor.com.gr/Attraction_Review-g494953-d4988659-Reviews-Alogomandra_Beach-Milos_Cyclades_South_Aegean.html"
-              target="_blank"><span class="fab fa-tripadvisor"></span></a>
-          </span>
-        </div>
+      
       </div>
     </div>
   </section>
@@ -687,7 +611,7 @@
           <p class="text-center">
             Copyright &copy;<script>
               document.write(new Date().getFullYear());
-            </script> Spyros Kasdaglis | All rights reserved </p>
+            </script> miloscasa.com | All rights reserved </p>
         </div>
         <div class="col-md-3 mb-5" data-aos="fade-down" data-aos-delay="200">
           <p class="text-right social">
