--- a/host.html
+++ b/host.html
@@ -241,7 +241,7 @@
           <p class="text-center">
             Copyright &copy;<script>
               document.write(new Date().getFullYear());
-            </script> Spyros Kasdaglis | All rights reserved </p>
+            </script> miloscasa.com | All rights reserved </p>
         </div>
         <div class="col-md-3 mb-5" data-aos="fade-down" data-aos-delay="200">
           <p class="text-right social">
