adding photos and amenities

--- a/directions.html
+++ b/directions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Casa Filakopi</title>
+  <title>Casa Milos</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -80,7 +80,7 @@
   <header class="site-header">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 site-logo" data-aos="fade"><a href="index.html">Casa Filakopi</a></div>
+        <div class="col-4 site-logo" data-aos="fade"><a href="index.html">Casa Milos</a></div>
         <div class="col-8">
 
 
@@ -151,7 +151,7 @@
         <div class="col-md-10 text-center">
           <div class="heading" data-aos="fade-up">
               <h1 class="welcome" data-aos="fade-up">How to get to</h1>
-              <h1 class="main" data-aos="fade-up">Casa Filakopi </h1>
+              <h1 class="main" data-aos="fade-up">Casa Milos </h1>
           </div><br>
           <p data-aos="fade-up" data-aos-delay="100"><a href="#"
               class="btn uppercase btn-primary mr-md-2 mr-0 mb-3 d-sm-inline d-block" data-toggle="modal"
@@ -428,7 +428,7 @@
                               <img class="img-responsive" src="img/directions_tinified/Adamas14.jpg" />
                             </div>
                             <div class="timeline-body">
-                              <p>You will see Casa Filakopi on your left.<br/> At the end of the road go left and you are there.</p>
+                              <p>You will see Casa Milos on your left.<br/> At the end of the road go left and you are there.</p>
                               
                             </div>
                             
