--- a/host.html
+++ b/host.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Casa Filakopi</title>
+  <title>Casa Milos</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -76,7 +76,7 @@
   <header class="site-header">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 site-logo" data-aos="fade"><a href="index.html">Casa Filakopi</a></div>
+        <div class="col-4 site-logo" data-aos="fade"><a href="index.html">Casa Milos</a></div>
         <div class="col-8">
 
 
@@ -194,7 +194,7 @@
                 Milos.</em><br> I have kept lots of strong memories from this house since my early childhood. Sharing
               the
               experience of staying in a place of such grace with other people, has been a dream come true.<br>
-              I wish for all of my visitors to experience the island and Casa Filakopi in the most meaningful and
+              I wish for all of my visitors to experience the island and Casa Milos in the most meaningful and
               joyful way.
               <br><br>
 
