--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Casa Filakopi</title>
+  <title>Casa Milos</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -148,7 +148,7 @@
         <div class="col-md-10 text-center">
           <div class="heading" data-aos="fade-up">
             <h1 class="welcome" data-aos="fade-up">Welcome to</h1>
-            <h1 class="main" data-aos="fade-up">Casa Filakopi </h1>
+            <h1 class="main" data-aos="fade-up">Casa Milos </h1>
           </div>
           <br>
           <p data-aos="fade-up" data-aos-delay="100"><a href="#section-housestructure"
@@ -178,7 +178,7 @@
         </div>
         <div class="col-md-12 col-lg-4 order-lg-1" data-aos="fade-up">
           <h2 class="heading">Welcome!</h2>
-          <p class="mb-4">Casa Filakopi is a farm house of 3.5 acre of cultivated fields and about 0.5 acre of house
+          <p class="mb-4">Casa Milos is a farm house of 3.5 acre of cultivated fields and about 0.5 acre of house
             facilities. Its history begins back in 1920 and during the last 2 years has been totally renovated,
             retaining its unique traditional old style features combined with modern amenities.<br>The facility has a
             very playful feel and it consists of two main rooms which can be isolated from each other, a W.C , an
@@ -358,7 +358,7 @@
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="img/tinified/_DSC1085.jpg" alt="First slide">
+                <img class="d-block w-100" src="img/tinified/fridge.jpeg" alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="img/tinified/_DSC1089.jpg" alt="Second slide">
@@ -367,10 +367,19 @@
                 <img class="d-block w-100" src="img/tinified/_DSC1090.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="img/tinified/_DSC1091.jpg" alt="Fourth slide">
+                <img class="d-block w-100" src="img/tinified/kitchen.jpeg" alt="Fourth slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="img/tinified/_DSC1167.jpg" alt="Fifth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/tinified/stove.jpeg" alt="Sixth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/tinified/gas-grill.jpeg" alt="Seventh slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="img/tinified/sinki.jpeg" alt="Eighth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-example-3z" role="button" data-slide="prev">
@@ -473,7 +482,7 @@
         </div>
         <div class="col-md-12 col-lg-4 order-lg-1" data-aos="fade-up">
           <h2 class="heading">Cool off spots</h2>
-          <p class="mb-4">All the spaces of Casa Filakopi are settled around a 70 sq meter yard .The courtyard of the
+          <p class="mb-4">All the spaces of Casa Milos are settled around a 70 sq meter yard .The courtyard of the
             place provides its guests with a beautiful and peaceful view of the fields, the dry river beneath the house
             and the sea sight on the horizon.</p>
           <p><a href="#" class="btn btn-primary text-white py-2 mr-3" data-toggle="modal"
@@ -546,7 +555,7 @@
             an interior bathroom , an exterior kitchen and an exterior bathroom.The house has retained the traditional
             character
             of a typical cycladic farm house of Milos.
-            Casa Filakopi stands alone, almost hidden, totally surrounded by silence and sounds of nature.
+            Casa Milos stands alone, almost hidden, totally surrounded by silence and sounds of nature.
             Your privacy will not be interrupted by anyone and anything.<br>
           </p>
         </div>
@@ -555,8 +564,8 @@
       <div class="row">
         <div class="col-md-12">
           <h2 class="heading" data-aos="fade-right">Amenities</h2>
-          <p data-aos="fade-left">Hammock, Exterior Shower, Electric Grill ,Air Conditioner , Wi-Fi ,TV, Hair
-            Dryer<br><br>
+          <p data-aos="fade-left">Hammock, Exterior Shower, Gas BBQ ,Air Conditioner , Wi-Fi ,TV, Hair
+            Dryer, Yoga Mattress, Snorkeling Equipment, Beach Towels<br><br>
           </p>
         </div>
       </div>
@@ -565,7 +574,7 @@
       <div class="row">
         <div class="col-md-12">
           <h2 class="heading" data-aos="fade-right">Places to visit</h2>
-          <p data-aos="fade-left">Casa Filakopi is about 2,5 km away from
+          <p data-aos="fade-left">Casa Milos is about 2,5 km away from
             Apollonia, one of the most famous traditional villages of Milos (well known for its restaurants, cafés and
             easy going atmosphere). You will also find yourself very near to all the northern beaches of Milos, such as
             Papafragas , Mytakas , Pachena , Sarakiniko , Kastanas.</p>
